Update to 1.17
There's still some bugs but it works for my purposes